--- a/跨域/package.json
+++ b/跨域/package.json
@@ -9,8 +9,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "express": "^4.17.1",
+    "http-proxy-middleware": "^1.1.0",
     "koa": "^2.13.1",
+    "koa-bodyparser": "^4.3.0",
     "koa-router": "^10.0.0",
-    "koa-static": "^5.0.0"
+    "koa-server-http-proxy": "^0.1.0",
+    "koa-static": "^5.0.0",
+    "koa2-proxy-middleware": "0.0.4"
   }
 }
